Fix: Sizer layout on mobile devices.

--- a/sizer/sizer.css
+++ b/sizer/sizer.css
@@ -1549,10 +1549,6 @@ header .header-description {
         visibility: visible !important;
     }
 
-    header {
-        padding: 0 25px;
-    }
-
     header .header-title {
         font-size: 1.5rem;
     }
@@ -1560,15 +1556,6 @@ header .header-description {
     header .header-description {
         font-size: 0.95rem;
         text-align: center;
-    }
-
-    .disclaimer-wrapper {
-        padding: 0 25px;
-    }
-
-    .sizer-footer {
-        padding-left: 25px;
-        padding-right: 25px;
     }
 
     .stats-container {
